--- a/CSS/index.css
+++ b/CSS/index.css
@@ -65,7 +65,7 @@
 .article {
   position: relative;
   overflow: hidden;
-  height: 50px;
+  height: 75px;
   background-color: white;
   font-size: 1.6rem;
   -webkit-box-shadow: 2px 2px 2px lightgrey;
@@ -101,12 +101,18 @@
   margin: 0;
 }
 .article .expandButton {
+  display: block;
   position: absolute;
+  left: 0;
   bottom: 0;
-  left: 50%;
+  width: 100%;
+  height: 15px;
+  background-color: snow;
   font-size: 1.2rem;
   color: grey;
+  text-align: center;
   cursor: pointer;
+  margin-top: 10px;
 }
 .newArticleForm {
   max-width: 90%;
