--- a/LESS/variables.less
+++ b/LESS/variables.less
@@ -8,6 +8,7 @@
 @article-background-color: white;
 @article-box-shadow-color: lightgrey;
 @article-border-color: lightgrey;
+@article-expand-button-background-color: snow;
 @article-expand-button-font-color: grey;
 
 @post-article-button-background-color: cadetblue;
